<?xml version="1.0"?>
<package format="2">
  <name>motoman_path_planning</name>
  <version>0.1.0</version>
  <description>The motoman_path_planning package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/ntl-ros-pkg/motoman_path_planning</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>motomini_dynamics_publisher</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
