<?xml version="1.0"?>
<package format="2">
  <name>motomini_dynamics_publisher</name>
  <version>0.0.0</version>
  <description>The motomini_dynamics_publisher package</description>
  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
